@@ -89,6 +89,8 @@ import uk.gov.hmcts.reform.prl.utils.ManageOrdersUtils;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
+import java.time.ZoneId;
+import java.time.ZonedDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -117,6 +119,7 @@ import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.CASE_TYPE_OF_AP
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.COMMA;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.COURT_NAME;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.DATE_TIME_PATTERN;
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.DA_ORDER_FOR_CA_CASE;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.DIO_CASEREVIEW_HEARING_DETAILS;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.DIO_FHDRA_HEARING_DETAILS;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.DIO_PERMISSION_HEARING_DETAILS;
@@ -124,6 +127,7 @@ import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.DIO_URGENT_FIRS
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.DIO_URGENT_HEARING_DETAILS;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.DIO_WITHOUT_NOTICE_HEARING_DETAILS;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.EMPTY_STRING;
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.EUROPE_LONDON_TIME_ZONE;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.FINAL_TEMPLATE_WELSH;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.FL401_CASE_TYPE;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.HEARINGS_TYPE;
@@ -133,6 +137,8 @@ import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.ORDER_HEARING_D
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.PM_LOWER_CASE;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.PM_UPPER_CASE;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.RESPONDENT_SOLICITOR;
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.SOS_NOT_REQUIRED;
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.SOS_PENDING;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.TASK_LIST_VERSION_V2;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.TASK_LIST_VERSION_V3;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.WA_HEARING_OPTION_SELECTED;
@@ -191,9 +197,9 @@ public class ManageOrderService {
     public static final String SERVE_ON_RESPONDENT = "serveOnRespondent";
     public static final String OTHER_PARTIES_SERVED = "otherPartiesServed";
     public static final String SERVING_RESPONDENTS_OPTIONS = "servingRespondentsOptions";
-
+    public static final String WHO_IS_RESPONSIBLE_TO_SERVE = "whoIsResponsibleToServe";
+    public static final String IS_MULTIPLE_ORDERS_SERVED = "multipleOrdersServed";
     public static final String RECIPIENTS_OPTIONS = "recipientsOptions";
-
     public static final String OTHER_PARTIES = "otherParties";
     public static final String SERVED_PARTIES = "servedParties";
 
@@ -602,6 +608,7 @@ public class ManageOrderService {
     private final RoleAssignmentApi roleAssignmentApi;
     private final AuthTokenGenerator authTokenGenerator;
     private final LaunchDarklyClient launchDarklyClient;
+    private final DocumentSealingService documentSealingService;
 
     public Map<String, Object> populateHeader(CaseData caseData) {
         Map<String, Object> headerMap = new HashMap<>();
@@ -634,9 +641,9 @@ public class ManageOrderService {
     }
 
     private void populateOtherServeOrderDetails(CaseData caseData, Map<String, Object> headerMap) {
+        setRecipientsOptions(caseData, headerMap);
+        setOtherParties(caseData, headerMap);
         if (CaseUtils.getCaseTypeOfApplication(caseData).equalsIgnoreCase(C100_CASE_TYPE)) {
-            setRecipientsOptions(caseData, headerMap);
-            setOtherParties(caseData, headerMap);
             if (caseData.getIsCafcass() != null) {
                 headerMap.put(
                     PrlAppsConstants.IS_CAFCASS,
@@ -901,6 +908,22 @@ public class ManageOrderService {
         return selectedOrder;
     }
 
+    public String getSelectedOrderIdForUpload(CaseData caseData) {
+        String selectedOrder;
+        if (caseData.getChildArrangementOrders() != null) {
+            selectedOrder = String.valueOf(caseData.getChildArrangementOrders());
+        } else if (caseData.getDomesticAbuseOrders() != null) {
+            selectedOrder = String.valueOf(caseData.getDomesticAbuseOrders());
+        } else if (caseData.getFcOrders() != null) {
+            selectedOrder = String.valueOf(caseData.getFcOrders());
+        } else if (caseData.getOtherOrdersOption() != null && caseData.getNameOfOrder() != null) {
+            selectedOrder = caseData.getOtherOrdersOption() + " : " + caseData.getNameOfOrder();
+        } else {
+            selectedOrder = "";
+        }
+        return selectedOrder;
+    }
+
     private String getSelectedOrderInfo(CaseData caseData) {
         StringBuilder selectedOrder = new StringBuilder();
         if (caseData.getManageOrdersOptions() != null) {
@@ -927,13 +950,15 @@ public class ManageOrderService {
         if (caseData.getManageOrdersOptions() == ManageOrdersOptionsEnum.createAnOrder) {
             flagSelectedOrderId = String.valueOf(caseData.getCreateSelectOrderOptions());
         } else {
-            flagSelectedOrderId = getSelectedOrderInfoForUpload(caseData);
+            flagSelectedOrderId = getSelectedOrderIdForUpload(caseData);
         }
         if (caseData.getCreateSelectOrderOptions() != null
             && !uploadAnOrder.equals(caseData.getManageOrdersOptions())) {
             Map<String, String> fieldMap = getOrderTemplateAndFile(caseData.getCreateSelectOrderOptions());
             List<Element<OrderDetails>> orderCollection = new ArrayList<>();
-            if (FL401_CASE_TYPE.equalsIgnoreCase(CaseUtils.getCaseTypeOfApplication(caseData))) {
+            if (FL401_CASE_TYPE.equalsIgnoreCase(CaseUtils.getCaseTypeOfApplication(caseData))
+                || ManageOrdersUtils.isDaOrderSelectedForCaCase(String.valueOf(caseData.getCreateSelectOrderOptions()),
+                                                            caseData)) {
                 caseData = populateCustomOrderFields(caseData, caseData.getCreateSelectOrderOptions());
             }
             if (CreateSelectOrderOptionsEnum.standardDirectionsOrder.equals(caseData.getCreateSelectOrderOptions())) {
@@ -965,8 +990,8 @@ public class ManageOrderService {
         SelectTypeOfOrderEnum typeOfOrder = CaseUtils.getSelectTypeOfOrder(caseData);
         String orderSelectionType = CaseUtils.getOrderSelectionType(caseData);
         List<Element<OrderDetails>> newOrderDetails = new ArrayList<>();
-        newOrderDetails.add(element(OrderDetails.builder().orderType(flagSelectedOrder)
-                                   .orderTypeId(flagSelectedOrderId)
+        newOrderDetails.add(element(OrderDetails.builder().orderType(flagSelectedOrderId)
+                                   .orderTypeId(flagSelectedOrder)
                                    .orderDocument(caseData.getUploadOrderDoc())
                                    .isTheOrderAboutChildren(caseData.getManageOrders().getIsTheOrderAboutChildren())
                                    .isTheOrderAboutAllChildren(caseData.getManageOrders().getIsTheOrderAboutAllChildren())
@@ -1011,6 +1036,7 @@ public class ManageOrderService {
                                                             ? caseData.getManageOrders().getHearingsType().getValueCode() : null)
                                    .childOption(getChildOption(caseData))
                                    .isOrderUploaded(Yes)
+                                   .doesOrderDocumentNeedSeal(Yes)
                                    .build()));
         return newOrderDetails;
     }
@@ -1035,10 +1061,10 @@ public class ManageOrderService {
         DynamicMultiSelectList childOption = caseData.getManageOrders().getChildOption();
         if ((YesOrNo.Yes.equals(caseData.getManageOrders().getIsTheOrderAboutChildren())
             || YesOrNo.No.equals(caseData.getManageOrders().getIsTheOrderAboutAllChildren()))
-            && childOption != null) {
+            && childOption != null && childOption.getValue() != null) {
             return getChildNames(childOption.getValue());
         } else if (C100_CASE_TYPE.equalsIgnoreCase(CaseUtils.getCaseTypeOfApplication(caseData))
-            && childOption != null && childOption.getListItems() != null) {
+            && childOption != null && Yes.equals(caseData.getManageOrders().getIsTheOrderAboutAllChildren())) {
             return getChildNames(childOption.getListItems());
         }
         return null;
@@ -1049,7 +1075,7 @@ public class ManageOrderService {
         String selectedChildNames;
         childList = new ArrayList<>();
         for (DynamicMultiselectListElement dynamicMultiselectChildElement : dynamicMultiselectListElements) {
-            childList.add(dynamicMultiselectChildElement.getLabel().trim());
+            childList.add(org.apache.commons.lang3.StringUtils.trimToEmpty(dynamicMultiselectChildElement.getLabel()));
         }
         selectedChildNames = String.join(", ", childList);
         return selectedChildNames;
@@ -1076,14 +1102,13 @@ public class ManageOrderService {
             List<PartyDetails> applicants = caseData
                 .getApplicants()
                 .stream()
-                .map(Element::getValue)
-                .collect(Collectors.toList());
+                .map(Element::getValue).toList();
 
             List<String> applicantSolicitorNames = applicants.stream()
                 .map(party -> Objects.nonNull(party.getSolicitorOrg().getOrganisationName())
                     ? party.getSolicitorOrg().getOrganisationName() + APPLICANT_SOLICITOR
                     : APPLICANT_SOLICITOR)
-                .collect(Collectors.toList());
+                .toList();
             return String.join("\n", applicantSolicitorNames);
         } else {
             PartyDetails applicantFl401 = caseData.getApplicantsFL401();
@@ -1097,14 +1122,13 @@ public class ManageOrderService {
                 .getRespondents()
                 .stream()
                 .map(Element::getValue)
-                .filter(r -> YesNoDontKnow.yes.equals(r.getDoTheyHaveLegalRepresentation()))
-                .collect(Collectors.toList());
+                .filter(r -> YesNoDontKnow.yes.equals(r.getDoTheyHaveLegalRepresentation())).toList();
             if (respondents.isEmpty()) {
                 return "";
             }
             List<String> respondentSolicitorNames = respondents.stream()
                 .map(party -> party.getSolicitorOrg().getOrganisationName() + RESPONDENT_SOLICITOR)
-                .collect(Collectors.toList());
+                .toList();
             return String.join("\n", respondentSolicitorNames);
         } else {
             PartyDetails respondentFl401 = caseData.getRespondentsFL401();
@@ -1168,8 +1192,8 @@ public class ManageOrderService {
                                             List<Element<OrderDetails>> newOrderDetails) {
         String currentOrderId;
         List<String> selectedOrderIds = serveOrderDynamicList.getValue()
-            .stream().map(DynamicMultiselectListElement::getCode).collect(Collectors.toList());
-        List<UUID> existingOrderIds = existingOrderCollection.stream().map(Element::getId).collect(Collectors.toList());
+            .stream().map(DynamicMultiselectListElement::getCode).toList();
+        List<UUID> existingOrderIds = existingOrderCollection.stream().map(Element::getId).toList();
 
         currentOrderId = selectedOrderIds
             .stream()
@@ -1323,13 +1347,6 @@ public class ManageOrderService {
         return null;
     }
 
-    public String getApplicantReference(CaseData caseData) {
-        if (!C100_CASE_TYPE.equalsIgnoreCase(CaseUtils.getCaseTypeOfApplication(caseData))) {
-            return caseData.getApplicantsFL401().getSolicitorReference();
-        }
-        return null;
-    }
-
     public SdoDetails copyPropertiesToSdoDetails(CaseData caseData) {
         if (null != caseData.getStandardDirectionOrder()) {
             SdoDetails sdoDetails;
@@ -1345,13 +1362,14 @@ public class ManageOrderService {
     }
 
     public DraftOrder getCurrentUploadDraftOrderDetails(CaseData caseData, String loggedInUserType, UserDetails userDetails) {
-        String flagSelectedOrderId = getSelectedOrderInfoForUpload(caseData);
+        String flagSelectedOrder = getSelectedOrderInfoForUpload(caseData);
         SelectTypeOfOrderEnum typeOfOrder = CaseUtils.getSelectTypeOfOrder(caseData);
         String orderSelectionType = CaseUtils.getOrderSelectionType(caseData);
 
         return DraftOrder.builder()
             .typeOfOrder(typeOfOrder != null ? typeOfOrder.getDisplayedValue() : null)
-            .orderTypeId(flagSelectedOrderId)
+            .orderType(CreateSelectOrderOptionsEnum.getIdFromValue(flagSelectedOrder))
+            .orderTypeId(flagSelectedOrder)
             .orderDocument(caseData.getUploadOrderDoc())
             .isTheOrderAboutChildren(caseData.getManageOrders().getIsTheOrderAboutChildren())
             .isTheOrderAboutAllChildren(caseData.getManageOrders().getIsTheOrderAboutAllChildren())
@@ -1440,21 +1458,24 @@ public class ManageOrderService {
     public List<Element<OrderDetails>> serveOrder(CaseData caseData, List<Element<OrderDetails>> orders) {
         if (null != caseData.getManageOrders() && null != caseData.getManageOrders().getServeOrderDynamicList()) {
             List<String> selectedOrderIds = caseData.getManageOrders().getServeOrderDynamicList().getValue()
-                .stream().map(DynamicMultiselectListElement::getCode).collect(Collectors.toList());
+                .stream().map(DynamicMultiselectListElement::getCode).toList();
             orders.stream()
                 .filter(order -> selectedOrderIds.contains(order.getId().toString()))
                 .forEach(order -> {
                     if (C100_CASE_TYPE.equalsIgnoreCase(CaseUtils.getCaseTypeOfApplication(caseData))) {
-                        servedC100Order(caseData, orders, order);
+                        log.info("Serving C100 order");
+                        servedC100Order(caseData, orders, order, selectedOrderIds.size() > 1);
                     } else {
-                        servedFL401Order(caseData, orders, order);
+                        log.info("Serving Fl401 order");
+                        servedFL401Order(caseData, orders, order, selectedOrderIds.size() > 1);
                     }
                 });
         }
         return orders;
     }
 
-    private void servedFL401Order(CaseData caseData, List<Element<OrderDetails>> orders, Element<OrderDetails> order) {
+    private void servedFL401Order(CaseData caseData, List<Element<OrderDetails>> orders, Element<OrderDetails> order,
+                                  boolean isMultipleOrdersServed) {
         YesOrNo otherPartiesServed = No;
         List<Element<PostalInformation>> postalInformation = null;
         List<Element<EmailInformation>> emailInformation = null;
@@ -1470,20 +1491,27 @@ public class ManageOrderService {
             postalInformation = (List<Element<PostalInformation>>) emailOrPostalInfo.get(POST);
             emailInformation = (List<Element<EmailInformation>>) emailOrPostalInfo.get(EMAIL);
         }
+        String recipients = null;
+        if (No.equals(caseData.getManageOrders().getServeToRespondentOptions())) {
+            recipients = getRecipients(caseData);
+        }
         List<Element<ServedParties>> servedParties = getUpdatedServedParties(caseData, order,serveRecipientName);
         SoaSolicitorServingRespondentsEnum servingRespondentsOptions = caseData.getManageOrders()
-            .getServingRespondentsOptionsDA();
+            .getPersonallyServeRespondentsOptions();
         Map<String, Object> servedOrderDetails = new HashMap<>();
+        servedOrderDetails.put(RECIPIENTS_OPTIONS, recipients);
         servedOrderDetails.put(SERVING_RESPONDENTS_OPTIONS, servingRespondentsOptions);
         servedOrderDetails.put(SERVED_PARTIES, servedParties);
         servedOrderDetails.put(OTHER_PARTIES_SERVED, otherPartiesServed);
-
+        servedOrderDetails.put(WHO_IS_RESPONSIBLE_TO_SERVE, getWhoIsResponsibleToServeOrder(caseData.getManageOrders()));
+        servedOrderDetails.put(IS_MULTIPLE_ORDERS_SERVED, isMultipleOrdersServed);
+        servedOrderDetails.put(SERVE_ON_RESPONDENT, caseData.getManageOrders().getServeToRespondentOptions());
         if (null != serveRecipientName
             && null != servingRespondentsOptions) {
             servedOrderDetails.put(SERVE_RECIPIENT_NAME, serveRecipientName + " (" + SoaSolicitorServingRespondentsEnum
                 .applicantLegalRepresentative.getDisplayedValue() + ")");
         }
-
+        log.info("Serve order details {}", servedOrderDetails);
         updateServedOrderDetails(
             servedOrderDetails,
             null,
@@ -1504,7 +1532,7 @@ public class ManageOrderService {
         return servedParties;
     }
 
-    private void servedC100Order(CaseData caseData, List<Element<OrderDetails>> orders, Element<OrderDetails> order) {
+    private void servedC100Order(CaseData caseData, List<Element<OrderDetails>> orders, Element<OrderDetails> order, boolean isMultipleOrdersServed) {
         YesOrNo serveOnRespondent = caseData.getManageOrders().getServeToRespondentOptions();
         Element<PartyDetails> partyDetailsElement = caseData.getApplicants().get(0);
         String serveRecipientName = null;
@@ -1532,8 +1560,8 @@ public class ManageOrderService {
             postalInformation = (List<Element<PostalInformation>>) emailOrPostalInfo.get(POST);
             emailInformation = (List<Element<EmailInformation>>) emailOrPostalInfo.get(EMAIL);
         }
-        YesOrNo cafcassServedOptions = No;
-        YesOrNo cafcassCymruServedOptions = No;
+        YesOrNo cafcassServedOptions = null;
+        YesOrNo cafcassCymruServedOptions = null;
         String cafCassEmail = null;
         String cafcassCymruEmail = null;
         if (caseData.getManageOrders().getCafcassServedOptions() != null) {
@@ -1555,6 +1583,8 @@ public class ManageOrderService {
         servedOrderDetails.put(RECIPIENTS_OPTIONS, recipients);
         servedOrderDetails.put(OTHER_PARTIES, otherParties);
         servedOrderDetails.put(SERVED_PARTIES, servedParties);
+        servedOrderDetails.put(WHO_IS_RESPONSIBLE_TO_SERVE, getWhoIsResponsibleToServeOrder(caseData.getManageOrders()));
+        servedOrderDetails.put(IS_MULTIPLE_ORDERS_SERVED, isMultipleOrdersServed);
 
         if (null != serveRecipientName
             && null != servingRespondentsOptions) {
@@ -1569,6 +1599,15 @@ public class ManageOrderService {
             postalInformation,
             emailInformation
         );
+    }
+
+    private String getWhoIsResponsibleToServeOrder(ManageOrders manageOrders) {
+        if (Yes.equals(manageOrders.getServeToRespondentOptions())) {
+            return NO.equals(manageOrders.getDisplayLegalRepOption())
+                ? manageOrders.getServingOptionsForNonLegalRep().getId()
+                : manageOrders.getPersonallyServeRespondentsOptions().getId();
+        }
+        return null;
     }
 
     private List<Element<ServedParties>> getServedParties(CaseData caseData, String representativeName) {
@@ -1590,14 +1629,19 @@ public class ManageOrderService {
                 ));
             }
             //personal service
-            SoaSolicitorServingRespondentsEnum servingRespondentsOptionsCA = caseData
-                .getManageOrders().getServingRespondentsOptionsCA();
-            updatePersonalServedParties(servingRespondentsOptionsCA, servedParties, representativeName);
+            updatePersonalServedParties(caseData.getManageOrders().getPersonallyServeRespondentsOptions(),
+                                        servedParties, representativeName);
+            //PRL-4113 - update all applicants party ids in case of personal service
+            if (Yes.equals(caseData.getManageOrders().getServeToRespondentOptions())) {
+                servedParties.addAll(ManageOrdersUtils.getServedParties(caseData.getApplicants()));
+            }
         }
         //FL401 - personal service
         if (FL401_CASE_TYPE.equalsIgnoreCase(CaseUtils.getCaseTypeOfApplication(caseData))) {
-            SoaSolicitorServingRespondentsEnum servingRespondentsOptionsDA = caseData.getManageOrders().getServingRespondentsOptionsDA();
-            updatePersonalServedParties(servingRespondentsOptionsDA, servedParties, representativeName);
+            updatePersonalServedParties(caseData.getManageOrders().getPersonallyServeRespondentsOptions(),
+                                        servedParties, representativeName);
+            //PRL-4113 - update applicant party id in case of personal service
+            servedParties.add(ManageOrdersUtils.getServedParty(caseData.getApplicantsFL401()));
         }
 
         return servedParties;
@@ -1605,6 +1649,7 @@ public class ManageOrderService {
 
     private void updatePersonalServedParties(SoaSolicitorServingRespondentsEnum servingRespondentsOptions,
                                              List<Element<ServedParties>> servedParties, String representativeName) {
+        ZonedDateTime zonedDateTime = ZonedDateTime.now(ZoneId.of(EUROPE_LONDON_TIME_ZONE));
         if (null != servingRespondentsOptions) {
             if (SoaSolicitorServingRespondentsEnum.applicantLegalRepresentative
                 .equals(servingRespondentsOptions)) {
@@ -1612,27 +1657,23 @@ public class ManageOrderService {
                                               .partyId("11111111-1111-1111-1111-111111111111")//adding some default value
                                               .partyName(representativeName + " (" + servingRespondentsOptions
                                                   .getDisplayedValue() + ")")
-                                              .servedDateTime(LocalDateTime.now())
+                                              .servedDateTime(zonedDateTime.toLocalDateTime())
                                               .build()));
 
             } else {
                 servedParties.add(element(ServedParties.builder()
                                               .partyId("00000000-0000-0000-0000-000000000000")//adding some default value
                                               .partyName(servingRespondentsOptions.getDisplayedValue())
-                                              .servedDateTime(LocalDateTime.now())
+                                              .servedDateTime(zonedDateTime.toLocalDateTime())
                                               .build()));
             }
         }
     }
 
     private static SoaSolicitorServingRespondentsEnum getServingRespondentsOptions(CaseData caseData) {
-        SoaSolicitorServingRespondentsEnum servingRespondentsOptions = null;
-        if (caseData.getManageOrders()
-            .getServingRespondentsOptionsCA() != null) {
-            servingRespondentsOptions = caseData.getManageOrders()
-                .getServingRespondentsOptionsCA();
-        }
-        return servingRespondentsOptions;
+        return caseData.getManageOrders().getPersonallyServeRespondentsOptions() != null ? caseData.getManageOrders()
+                .getPersonallyServeRespondentsOptions() : null;
+
     }
 
     private static void getEmailAndPostalInfoOfOrg(CaseData caseData, Map<String, Object> emailOrPostalInfo) {
@@ -1693,7 +1734,9 @@ public class ManageOrderService {
         List<Element<ServedParties>> servedParties = new ArrayList<>();
 
         String serveRecipientName = null;
-
+        String whoIsResponsibleToServe = null;
+        YesOrNo multipleOrdersServed = null;
+        log.info("Serve order details {} serve on respondent {}", servedOrderDetails, serveOnRespondent);
         if (servedOrderDetails.containsKey(CAFCASS_EMAIL) && null != servedOrderDetails.get(CAFCASS_EMAIL)) {
             cafcassEmail = (String) servedOrderDetails.get(CAFCASS_EMAIL);
         }
@@ -1725,6 +1768,13 @@ public class ManageOrderService {
         if (servedOrderDetails.containsKey(SERVE_RECIPIENT_NAME)) {
             serveRecipientName = (String) servedOrderDetails.get(SERVE_RECIPIENT_NAME);
         }
+        if (servedOrderDetails.containsKey(WHO_IS_RESPONSIBLE_TO_SERVE)) {
+            whoIsResponsibleToServe = (String) servedOrderDetails.get(WHO_IS_RESPONSIBLE_TO_SERVE);
+        }
+        if (servedOrderDetails.containsKey(IS_MULTIPLE_ORDERS_SERVED)) {
+            multipleOrdersServed = (boolean) servedOrderDetails.get(IS_MULTIPLE_ORDERS_SERVED) ? Yes : No;
+        }
+
         ServeOrderDetails tempServeOrderDetails;
         if (order.getValue().getServeOrderDetails() != null) {
             tempServeOrderDetails = order.getValue().getServeOrderDetails();
@@ -1736,12 +1786,12 @@ public class ManageOrderService {
         String organisationsName = null;
         if (null != postalInformation) {
             orgNameList.addAll(postalInformation.stream()
-                .map(postalInfoElem -> postalInfoElem.getValue().getPostalName()).collect(Collectors.toList()));
+                .map(postalInfoElem -> postalInfoElem.getValue().getPostalName()).toList());
         }
 
         if (null != emailInformation) {
             orgNameList.addAll(emailInformation.stream()
-                .map(emailInfoElem -> emailInfoElem.getValue().getEmailName()).collect(Collectors.toList()));
+                .map(emailInfoElem -> emailInfoElem.getValue().getEmailName()).toList());
         }
 
         if (!orgNameList.isEmpty()) {
@@ -1764,16 +1814,15 @@ public class ManageOrderService {
             .servedParties(servedParties)
             .servingRecipientName(serveRecipientName)
             .courtPersonalService(courtPersonalService)
+            .whoIsResponsibleToServe(whoIsResponsibleToServe)
+            .multipleOrdersServed(multipleOrdersServed)
             .build();
 
         OrderDetails amended = order.getValue().toBuilder()
-            .orderDocument(order.getValue().getOrderDocument())
-            .orderType(order.getValue().getOrderType())
-            .typeOfOrder(order.getValue().getTypeOfOrder())
             .otherDetails(updateOtherOrderDetails(order.getValue().getOtherDetails()))
-            .dateCreated(order.getValue().getDateCreated())
-            .orderTypeId(order.getValue().getOrderTypeId())
             .serveOrderDetails(serveOrderDetails)
+            //Revisit for FL401 orders
+            .sosStatus(Yes.equals(serveOnRespondent) ? SOS_PENDING : SOS_NOT_REQUIRED)
             .build();
 
         orders.set(orders.indexOf(order), element(order.getId(), amended));
@@ -1796,11 +1845,11 @@ public class ManageOrderService {
             .getAppointedGuardianName()
             .stream()
             .map(Element::getValue)
-            .collect(Collectors.toList());
+            .toList();
 
         List<String> nameList = appointedGuardianFullNameList.stream()
             .map(AppointedGuardianFullName::getGuardianFullName)
-            .collect(Collectors.toList());
+            .toList();
 
         nameList.forEach(name -> {
             AppointedGuardianFullName appointedGuardianFullName
@@ -1840,7 +1889,7 @@ public class ManageOrderService {
             Map<String, String> fieldsMap = getOrderTemplateAndFile(selectOrderOption);
             updateDocmosisAttributes(authorisation, caseData, caseDataUpdated, fieldsMap);
         } catch (Exception ex) {
-            log.error("Error occured while generating Draft document ==> ", ex);
+            log.error("Error occured while generating Draft document ==> {}", ex.getMessage());
         }
         return caseDataUpdated;
     }
@@ -2006,7 +2055,7 @@ public class ManageOrderService {
             .stream()
             .filter(element -> ((element.getValue().getHearingTypes() != null && element.getValue().getHearingTypes().getValue() != null)
                 || element.getValue().getHearingDateConfirmOptionEnum() != null))
-            .collect(Collectors.toList());
+            .toList();
         return caseData.toBuilder()
             .manageOrders(caseData.getManageOrders().toBuilder()
                               .ordersHearingDetails(filteredHearingDataList).build()).build();
@@ -2029,6 +2078,11 @@ public class ManageOrderService {
     }
 
     public CaseData getN117FormData(CaseData caseData) {
+
+        PartyDetails applicant1 = C100_CASE_TYPE.equalsIgnoreCase(CaseUtils.getCaseTypeOfApplication(caseData))
+            ? caseData.getApplicants().get(0).getValue() : caseData.getApplicantsFL401();
+        PartyDetails respondent1 = C100_CASE_TYPE.equalsIgnoreCase(CaseUtils.getCaseTypeOfApplication(caseData))
+            ? caseData.getRespondents().get(0).getValue() : caseData.getRespondentsFL401();
         ManageOrders orderData = caseData.getManageOrders().toBuilder()
             .manageOrdersCaseNo(String.valueOf(caseData.getId()))
             .recitalsOrPreamble(caseData.getManageOrders().getRecitalsOrPreamble())
@@ -2039,28 +2093,28 @@ public class ManageOrderService {
             .furtherDirectionsIfRequired(caseData.getManageOrders().getFurtherDirectionsIfRequired())
             .furtherInformationIfRequired(caseData.getManageOrders().getFurtherInformationIfRequired())
             .manageOrdersCourtName(null != caseData.getCourtName() ? caseData.getCourtName() : null)
-            .manageOrdersApplicant(String.format(PrlAppsConstants.FORMAT, caseData.getApplicantsFL401().getFirstName(),
-                                                 caseData.getApplicantsFL401().getLastName()
+            .manageOrdersApplicant(String.format(PrlAppsConstants.FORMAT, applicant1.getFirstName(),
+                                                 applicant1.getLastName()
             ))
             .manageOrdersRespondent(String.format(
                 PrlAppsConstants.FORMAT,
-                caseData.getRespondentsFL401().getFirstName(),
-                caseData.getRespondentsFL401().getLastName()
+                respondent1.getFirstName(),
+                respondent1.getLastName()
             ))
-            .manageOrdersApplicantReference(caseData.getApplicantsFL401().getSolicitorReference() != null
-                                                ? caseData.getApplicantsFL401().getSolicitorReference() : "")
+            .manageOrdersApplicantReference(applicant1.getSolicitorReference() != null
+                                                ? applicant1.getSolicitorReference() : "")
             //PRL-5137
-            .manageOrdersRespondentReference(caseData.getRespondentsFL401().getSolicitorReference() != null
-                                                 ? caseData.getRespondentsFL401().getSolicitorReference() : "")
+            .manageOrdersRespondentReference(respondent1.getSolicitorReference() != null
+                                                 ? respondent1.getSolicitorReference() : "")
             .build();
 
-        if (ofNullable(caseData.getRespondentsFL401().getAddress()).isPresent()) {
+        if (ofNullable(respondent1.getAddress()).isPresent()) {
             orderData = orderData.toBuilder()
-                .manageOrdersRespondentAddress(caseData.getRespondentsFL401().getAddress()).build();
+                .manageOrdersRespondentAddress(respondent1.getAddress()).build();
         }
-        if (ofNullable(caseData.getRespondentsFL401().getDateOfBirth()).isPresent()) {
+        if (ofNullable(respondent1.getDateOfBirth()).isPresent()) {
             orderData = orderData.toBuilder()
-                .manageOrdersRespondentDob(caseData.getRespondentsFL401().getDateOfBirth()).build();
+                .manageOrdersRespondentDob(respondent1.getDateOfBirth()).build();
         }
 
         return caseData.toBuilder().manageOrders(orderData)
@@ -2086,32 +2140,39 @@ public class ManageOrderService {
         FL404 orderData = caseData.getManageOrders().getFl404CustomFields();
 
         if (orderData != null) {
+
+            PartyDetails applicant1 = C100_CASE_TYPE.equalsIgnoreCase(CaseUtils.getCaseTypeOfApplication(caseData))
+                && CollectionUtils.isNotEmpty(caseData.getApplicants())
+                ? caseData.getApplicants().get(0).getValue() : caseData.getApplicantsFL401();
+            PartyDetails respondent1 = C100_CASE_TYPE.equalsIgnoreCase(CaseUtils.getCaseTypeOfApplication(caseData))
+                && CollectionUtils.isNotEmpty(caseData.getRespondents())
+                ? caseData.getRespondents().get(0).getValue() : caseData.getRespondentsFL401();
             orderData = orderData.toBuilder()
                 .fl404bCaseNumber(String.valueOf(caseData.getId()))
                 .fl404bCourtName(caseData.getCourtName())
                 .fl404bApplicantName(String.format(
                     PrlAppsConstants.FORMAT,
-                    caseData.getApplicantsFL401().getFirstName(),
-                    caseData.getApplicantsFL401().getLastName()
+                    applicant1.getFirstName(),
+                    applicant1.getLastName()
                 ))
                 .fl404bRespondentName(String.format(
                     PrlAppsConstants.FORMAT,
-                    caseData.getRespondentsFL401().getFirstName(),
-                    caseData.getRespondentsFL401().getLastName()
+                    respondent1.getFirstName(),
+                    respondent1.getLastName()
                 ))
-                .fl404bApplicantReference(caseData.getApplicantsFL401().getSolicitorReference() != null
-                                              ? caseData.getApplicantsFL401().getSolicitorReference() : "")
-                .fl404bRespondentReference(caseData.getRespondentsFL401().getSolicitorReference() != null
-                                               ? caseData.getRespondentsFL401().getSolicitorReference() : "")
+                .fl404bApplicantReference(applicant1.getSolicitorReference() != null
+                                              ? applicant1.getSolicitorReference() : "")
+                .fl404bRespondentReference(respondent1.getSolicitorReference() != null
+                                               ? respondent1.getSolicitorReference() : "")
                 .build();
 
-            if (ofNullable(caseData.getRespondentsFL401().getAddress()).isPresent()) {
+            if (ofNullable(respondent1.getAddress()).isPresent()) {
                 orderData = orderData.toBuilder()
-                    .fl404bRespondentAddress(caseData.getRespondentsFL401().getAddress()).build();
+                    .fl404bRespondentAddress(respondent1.getAddress()).build();
             }
-            if (ofNullable(caseData.getRespondentsFL401().getDateOfBirth()).isPresent()) {
+            if (ofNullable(respondent1.getDateOfBirth()).isPresent()) {
                 orderData = orderData.toBuilder()
-                    .fl404bRespondentDob(caseData.getRespondentsFL401().getDateOfBirth()).build();
+                    .fl404bRespondentDob(respondent1.getDateOfBirth()).build();
             }
         }
         caseData = caseData.toBuilder()
@@ -2271,14 +2332,16 @@ public class ManageOrderService {
                            .childArrangementsOrdersToIssue(caseData.getManageOrders().getChildArrangementsOrdersToIssue())
                            .childOption(getChildOption(caseData))
                            .isOrderUploaded(No)
+                           //PRL-6046 - persist FL404 data
+                           .fl404CustomFields(caseData.getManageOrders().getFl404CustomFields())
                            .build());
     }
 
     private OrderDetails getNewOrderDetails(String flagSelectedOrderId, String flagSelectedOrder,
                                             CaseData caseData, SelectTypeOfOrderEnum typeOfOrder,
                                             ServeOrderData serveOrderData) {
-        return OrderDetails.builder().orderType(flagSelectedOrder)
-            .orderTypeId(flagSelectedOrderId)
+        return OrderDetails.builder().orderType(flagSelectedOrderId)
+            .orderTypeId(flagSelectedOrder)
             .withdrawnRequestType(null != caseData.getManageOrders().getWithdrawnOrRefusedOrder()
                                       ? caseData.getManageOrders().getWithdrawnOrRefusedOrder().getDisplayedValue() : null)
             .isWithdrawnRequestApproved(getWithdrawRequestInfo(caseData))
@@ -2289,20 +2352,26 @@ public class ManageOrderService {
             .typeOfChildArrangementsOrder(CreateSelectOrderOptionsEnum.childArrangementsSpecificProhibitedOrder
                                               .equals(CreateSelectOrderOptionsEnum.getValue(flagSelectedOrderId))
                                               ? getChildArrangementOrder(caseData) : "")
-            .childrenList((Yes.equals(caseData.getManageOrders().getIsTheOrderAboutChildren())
-                || No.equals(caseData.getManageOrders().getIsTheOrderAboutAllChildren()))
-                              ? dynamicMultiSelectListService
-                .getStringFromDynamicMultiSelectList(caseData.getManageOrders()
-                                                         .getChildOption())
-                              : dynamicMultiSelectListService
-                .getStringFromDynamicMultiSelectListFromListItems(caseData.getManageOrders()
-                                                                      .getChildOption()))
+            .childrenList(getChildrenListForNewOrder(caseData))
             .orderClosesCase(SelectTypeOfOrderEnum.finl.equals(typeOfOrder)
                                  ? caseData.getDoesOrderClosesCase() : null)
             .serveOrderDetails(buildServeOrderDetails(serveOrderData))
             .sdoDetails(CreateSelectOrderOptionsEnum.standardDirectionsOrder.equals(caseData.getCreateSelectOrderOptions())
                             ? copyPropertiesToSdoDetails(caseData) : null)
             .build();
+    }
+
+    private String getChildrenListForNewOrder(CaseData caseData) {
+        if (Yes.equals(caseData.getManageOrders().getIsTheOrderAboutChildren())
+            || No.equals(caseData.getManageOrders().getIsTheOrderAboutAllChildren())) {
+            return dynamicMultiSelectListService.getStringFromDynamicMultiSelectList(caseData.getManageOrders()
+                                                                                         .getChildOption());
+        } else if (Yes.equals(caseData.getManageOrders().getIsTheOrderAboutAllChildren())) {
+            return dynamicMultiSelectListService
+                .getStringFromDynamicMultiSelectListFromListItems(caseData.getManageOrders()
+                                                                      .getChildOption());
+        }
+        return null;
     }
 
     private String getChildArrangementOrder(CaseData caseData) {
@@ -2390,7 +2459,10 @@ public class ManageOrderService {
         }
 
         if (caseData.getCreateSelectOrderOptions() != null && !uploadAnOrder.equals(caseData.getManageOrdersOptions())) {
-            if (PrlAppsConstants.FL401_CASE_TYPE.equalsIgnoreCase(CaseUtils.getCaseTypeOfApplication(caseData))) {
+            if (PrlAppsConstants.FL401_CASE_TYPE.equalsIgnoreCase(CaseUtils.getCaseTypeOfApplication(caseData))
+                || ManageOrdersUtils.isDaOrderSelectedForCaCase(
+                String.valueOf(caseData.getCreateSelectOrderOptions()),
+                caseData)) {
                 caseData = populateCustomOrderFields(caseData, caseData.getCreateSelectOrderOptions());
             }
             caseDataUpdated.putAll(getCaseData(authorisation, caseData, caseData.getCreateSelectOrderOptions()));
@@ -2482,10 +2554,10 @@ public class ManageOrderService {
                         return concat(concat(hearingType, " - "), hearingDate);
                     }
                     return null;
-                }).filter(Objects::nonNull).collect(Collectors.toList())).orElse(Collections.emptyList());
+                }).filter(Objects::nonNull).toList()).orElse(Collections.emptyList());
             }).map(this::getDynamicListElements)
             .flatMap(Collection::stream)
-            .collect(Collectors.toList());
+            .toList();
 
         //if there are no hearings then dropdown would be empty
         DynamicList existingHearingsType = (null != caseData.getManageOrders() && null != caseData.getManageOrders().getHearingsType())
@@ -3121,6 +3193,9 @@ public class ManageOrderService {
         //children dynamic multi select list
         caseDataUpdated.put(CHILD_OPTION, DynamicMultiSelectList.builder()
             .listItems(dynamicMultiSelectListService.getChildrenMultiSelectList(caseData)).build());
+        caseDataUpdated.put(DA_ORDER_FOR_CA_CASE,
+                            ManageOrdersUtils.isDaOrderSelectedForCaCase(String.valueOf(caseData.getCreateSelectOrderOptions()),
+                                                                         caseData) ? Yes : No);
         caseDataUpdated.put("loggedInUserType", getLoggedInUserType(authorisation));
 
         //PRL-3254 - Populate hearing details dropdown for create order
@@ -3148,6 +3223,29 @@ public class ManageOrderService {
         }
     }
 
+    public void addSealToOrders(String authorisation, CaseData caseData, Map<String, Object> caseDataUpdated) {
+        List<Element<OrderDetails>> orders = caseData.getOrderCollection();
+        if (orders != null) {
+            orders.stream().filter(order -> order.getValue().getDoesOrderDocumentNeedSeal() != null
+                    && order.getValue().getDoesOrderDocumentNeedSeal().equals(Yes))
+                .forEach(order -> {
+                    OrderDetails orderDetails = order.getValue();
+
+                    Element<OrderDetails> sealedOrder = Element.<OrderDetails>builder().id(order.getId()).value(
+                        orderDetails.toBuilder().orderDocument(
+                            documentSealingService.sealDocument(
+                                orderDetails.getOrderDocument(),
+                                caseData,
+                                authorisation
+                            )).doesOrderDocumentNeedSeal(No).build()).build();
+
+                    orders.set(orders.indexOf(order), sealedOrder);
+                });
+
+            caseDataUpdated.put(ORDER_COLLECTION, orders);
+        }
+    }
+
     public Map<String, Object> setFieldsForWaTask(String authorisation, CaseData caseData, String eventId) {
         String judgeLaReviewRequired = null;
         String performingUser = null;
@@ -3157,10 +3255,16 @@ public class ManageOrderService {
         if (ManageOrdersOptionsEnum.createAnOrder.equals(caseData.getManageOrdersOptions())
             || ManageOrdersOptionsEnum.uploadAnOrder.equals(caseData.getManageOrdersOptions())) {
             if (ManageOrdersOptionsEnum.createAnOrder.equals(caseData.getManageOrdersOptions())) {
-                orderNameForWA = ManageOrdersUtils.getOrderNameAlongWithTime(caseData.getCreateSelectOrderOptions() != null
-                                                                                 ? caseData.getCreateSelectOrderOptions().getDisplayedValue() : " ");
+                orderNameForWA = ManageOrdersUtils.getOrderNameAlongWithTime(
+                    caseData.getCreateSelectOrderOptions() != null
+                        ? caseData.getCreateSelectOrderOptions().getDisplayedValue() : " ",
+                    dateTime.now()
+                );
             } else if (ManageOrdersOptionsEnum.uploadAnOrder.equals(caseData.getManageOrdersOptions())) {
-                orderNameForWA = ManageOrdersUtils.getOrderNameAlongWithTime(getSelectedOrderInfoForUpload(caseData));
+                orderNameForWA = ManageOrdersUtils.getOrderNameAlongWithTime(
+                    getSelectedOrderInfoForUpload(caseData),
+                    dateTime.now()
+                );
             }
             performingUser = getLoggedInUserType(authorisation);
             performingAction = caseData.getManageOrdersOptions().getDisplayedValue();
@@ -3350,7 +3454,7 @@ public class ManageOrderService {
                                                  Boolean isRespondent) {
         List<Element<PartyDetails>> selectedPartyList = partyDetails.stream()
             .filter(party -> selectedPartyIds.contains(party.getId().toString()))
-            .collect(Collectors.toList());
+            .toList();
         for (Element<PartyDetails> party : selectedPartyList) {
             if ((isRespondent
                 && YesNoDontKnow.no.equals(party.getValue().getDoTheyHaveLegalRepresentation()))
