@@ -12,7 +12,6 @@ import java.util.Objects;
 import java.util.Optional;
 import java.util.UUID;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static java.util.Collections.emptyList;
@@ -77,7 +76,7 @@ public class ElementUtils {
     public static <T> List<Element<T>> findElements(T elementToFind, List<Element<T>> elements) {
         return nullSafeCollection(elements).stream()
             .filter(element -> Objects.equals(element.getValue(), elementToFind))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     public static <T> List<UUID> findElementsId(T elementToFind, List<Element<T>> elements) {
